--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://ice-mixture.github.io/omg//'
 languageCode = 'en-us'
 publishDir = "docs"
 title = 'My New Hugo Site'
